EPMRPP-88602 || got rid of joda time library